fix: adjust rotation angle for card overlays to improve visual alignment

--- a/src/components/sections/about/about.module.scss
+++ b/src/components/sections/about/about.module.scss
@@ -187,7 +187,7 @@
 			left: 25%;
 			z-index: 1;
 			opacity: 1;
-			transform: rotate(8deg);
+			transform: rotate(6deg);
 		}
 	}
 
@@ -196,7 +196,7 @@
 		z-index: 1;
 		opacity: 1;
 		box-shadow: $shadow-md;
-		transform: rotate(8deg);
+		transform: rotate(6deg);
 
 		&.active {
 			left: 0;
@@ -210,7 +210,7 @@
 			left: 25%;
 			z-index: 1;
 			opacity: 1;
-			transform: rotate(8deg);
+			transform: rotate(6deg);
 		}
 	}
 
